// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Components/PurePTMGDashboard Loading 1`] = `
<div>
  <div
    displayactivites="true"
  >
    <div
      class="desktop-blobs"
    >
      <div
        class="desktop-blob-2-3"
      >
        <h1
          class="mt-xs mb-xxl"
        >
          Tableau de bord PTMG
        </h1>
      </div>
    </div>
    <div
      class="loaders fixed p"
    >
      <div
        class="loader"
      />
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`Automated Storybook Snapshots Components/PurePTMGDashboard Ok 1`] = `
<div>
  <div
    displayactivites="true"
  >
    <div
      class="desktop-blobs"
    >
      <div
        class="desktop-blob-2-3"
      >
        <h1
          class="mt-xs mb-xxl"
        >
          Tableau de bord PTMG
        </h1>
      </div>
    </div>
    <!--v-if-->
    <div>
      
      <div
        class="line-neutral width-full mb-l"
      />
      <h3>
        ARM en attente
      </h3>
      <div
        class="mb-xxl"
      >
        <div
          class="overflow-scroll-x mb"
        >
          <div
            class="table"
          >
            <div
              class="tr"
            >
              
              <div
                class="th nowrap min-width-8"
              >
                <button
                  class="btn-menu full-x p-0"
                >
                  Nom 
                  <!--v-if-->
                </button>
              </div>
              <div
                class="th nowrap nowrap min-width-5"
              >
                <button
                  class="btn-menu full-x p-0"
                >
                  Statut 
                  <svg
                    aria-labelledby="chevron-bas"
                    class="right"
                    fill="#666"
                    height="24px"
                    role="application"
                    style="display: block;"
                    tabindex="-1"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-hidden="true"
                      style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <symbol
                        id="icon-chevron-bas"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          chevron-bas
                        </title>
                        <path
                          d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
                        />
                      </symbol>
                      <symbol
                        id="icon-chevron-haut"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          chevron-haut
                        </title>
                        <path
                          d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
                        />
                      </symbol>
                      <symbol
                        id="icon-close"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          close
                        </title>
                        <path
                          d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
                        />
                      </symbol>
                      <symbol
                        id="icon-download"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          download
                        </title>
                        <path
                          d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
                        />
                      </symbol>
                    </svg>
                    <use
                      href="#icon-chevron-bas"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="th nowrap min-width-8"
              >
                <button
                  class="btn-menu full-x p-0"
                >
                  Références 
                  <!--v-if-->
                </button>
              </div>
              <div
                class="th nowrap min-width-10"
              >
                <button
                  class="btn-menu full-x p-0"
                >
                  Titulaires 
                  <!--v-if-->
                </button>
              </div>
              
            </div>
            
            <router-link
              class="tr tr-link text-decoration-none"
              to="[object Object]"
            >
              
              <div
                class="td min-width-8"
              >
                <span
                  class="bold"
                >
                  first-name
                </span>
              </div>
              <div
                class="td nowrap min-width-5"
              >
                <span
                  class="cap-first small bold"
                >
                  <span
                    class="bg-warning color-bg pill py-xs px-s"
                  >
                    
                    demande initiale
                    
                  </span>
                </span>
              </div>
              <div
                class="td min-width-8"
              >
                <ul
                  class="list-prefix mb--xs"
                >
                  
                  
                </ul>
              </div>
              <div
                class="td min-width-10"
              >
                <ul
                  class="list-prefix mb--xs"
                >
                  
                  <li
                    class="h6"
                  >
                    Titulaire1
                  </li>
                  
                </ul>
              </div>
              
            </router-link>
            <router-link
              class="tr tr-link text-decoration-none"
              to="[object Object]"
            >
              
              <div
                class="td min-width-8"
              >
                <span
                  class="bold"
                >
                  Second Nom de titre
                </span>
              </div>
              <div
                class="td nowrap min-width-5"
              >
                <span
                  class="cap-first small bold"
                >
                  <span
                    class="bg-warning color-bg pill py-xs px-s"
                  >
                    
                    demande initiale
                    
                  </span>
                </span>
              </div>
              <div
                class="td min-width-8"
              >
                <ul
                  class="list-prefix mb--xs"
                >
                  
                  <li
                    class="h6"
                  >
                    PTMG : 2010-001
                  </li>
                  <li
                    class="h6"
                  >
                    PTMG : 2010-000
                  </li>
                  
                </ul>
              </div>
              <div
                class="td min-width-10"
              >
                <ul
                  class="list-prefix mb--xs"
                >
                  
                  <li
                    class="h6"
                  >
                    Titulaire3
                  </li>
                  
                </ul>
              </div>
              
            </router-link>
            <router-link
              class="tr tr-link text-decoration-none"
              to="[object Object]"
            >
              
              <div
                class="td min-width-8"
              >
                <span
                  class="bold"
                >
                  Quatrième Nom de titre
                </span>
              </div>
              <div
                class="td nowrap min-width-5"
              >
                <span
                  class="cap-first small bold"
                >
                  <span
                    class="bg-warning color-bg pill py-xs px-s"
                  >
                    
                    demande initiale
                    
                  </span>
                </span>
              </div>
              <div
                class="td min-width-8"
              >
                <ul
                  class="list-prefix mb--xs"
                >
                  
                  <li
                    class="h6"
                  >
                    PTMG : 2010-001
                  </li>
                  <li
                    class="h6"
                  >
                    PTMG : 2010-000
                  </li>
                  
                </ul>
              </div>
              <div
                class="td min-width-10"
              >
                <ul
                  class="list-prefix mb--xs"
                >
                  
                  <li
                    class="h6"
                  >
                    Titulaire 8
                  </li>
                  
                </ul>
              </div>
              
            </router-link>
            
          </div>
        </div>
      </div>
      
      <div
        class="line-neutral width-full mb-l"
      />
      <h3>
        ARM en cours d’instruction
      </h3>
      <div
        class="width-full-p"
      >
        <div
          class="overflow-scroll-x mb"
        >
          <div
            class="table"
          >
            <div
              class="tr"
            >
              
              <div
                class="th nowrap min-width-8"
              >
                <button
                  class="btn-menu full-x p-0"
                >
                  Nom 
                  <!--v-if-->
                </button>
              </div>
              <div
                class="th nowrap nowrap min-width-5"
              >
                <button
                  class="btn-menu full-x p-0"
                >
                  Statut 
                  <svg
                    aria-labelledby="chevron-bas"
                    class="right"
                    fill="#666"
                    height="24px"
                    role="application"
                    style="display: block;"
                    tabindex="-1"
                    viewBox="0 0 24 24"
                    width="24px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-hidden="true"
                      style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <symbol
                        id="icon-chevron-bas"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          chevron-bas
                        </title>
                        <path
                          d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
                        />
                      </symbol>
                      <symbol
                        id="icon-chevron-haut"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          chevron-haut
                        </title>
                        <path
                          d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
                        />
                      </symbol>
                      <symbol
                        id="icon-close"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          close
                        </title>
                        <path
                          d="M12 10.586l4.95-4.95 1.414 1.414-4.95 4.95 4.95 4.95-1.414 1.414-4.95-4.95-4.95 4.95-1.414-1.414 4.95-4.95-4.95-4.95L7.05 5.636z"
                        />
                      </symbol>
                      <symbol
                        id="icon-download"
                        viewBox="0 0 24 24"
                      >
                        <title>
                          download
                        </title>
                        <path
                          d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
                        />
                      </symbol>
                    </svg>
                    <use
                      href="#icon-chevron-bas"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="th nowrap min-width-8"
              >
                <button
                  class="btn-menu full-x p-0"
                >
                  Références 
                  <!--v-if-->
                </button>
              </div>
              <div
                class="th nowrap min-width-10"
              >
                <button
                  class="btn-menu full-x p-0"
                >
                  Titulaires 
                  <!--v-if-->
                </button>
              </div>
              
            </div>
            
            <router-link
              class="tr tr-link text-decoration-none"
              to="[object Object]"
            >
              
              <div
                class="td min-width-8"
              >
                <span
                  class="bold"
                >
                  third-name
                </span>
              </div>
              <div
                class="td nowrap min-width-5"
              >
                <span
                  class="cap-first small bold"
                >
                  <span
                    class="bg-warning color-bg pill py-xs px-s"
                  >
                    
                    demande initiale
                    
                  </span>
                </span>
              </div>
              <div
                class="td min-width-8"
              >
                <ul
                  class="list-prefix mb--xs"
                >
                  
                  
                </ul>
              </div>
              <div
                class="td min-width-10"
              >
                <ul
                  class="list-prefix mb--xs"
                >
                  
                  <li
                    class="h6"
                  >
                    Titulaire1
                  </li>
                  
                </ul>
              </div>
              
            </router-link>
            
          </div>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Automated Storybook Snapshots Components/PurePTMGDashboard With Error 1`] = `
<div>
  <div
    displayactivites="true"
  >
    <div
      class="desktop-blobs"
    >
      <div
        class="desktop-blob-2-3"
      >
        <h1
          class="mt-xs mb-xxl"
        >
          Tableau de bord PTMG
        </h1>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
    <div
      class="mb p-s color-bg bg-error"
    >
      Le serveur est inaccessible, veuillez réessayer plus tard
    </div>
  </div>
</div>
`;
